# pqm4-LightCROSS

./: .gitignore  README.md  compile-shell.nix  debug-shell.nix  interface.py  process_profile.py  profile.py  shell.nix  skiplist.py
KAT/: .gitignore  optimized_kat.txt  reference_kat.txt  verify_kat.sh
KAT/kat/: .gitignore  CMakeLists.txt  build.sh  flamegraph.pl  gen_all_kat.sh  profile.sh
KAT/kat/src/: PQCgenKAT_sign.c  hal-x86.c  openssl-fwd.h  randombytes.c  randombytes.h
crypto_sign/crossv2.0-sha3-r-sdp-1-balance/ultra/: seedtree.h
crypto_sign/crossv2.0-sha3-r-sdp-1-small/light/: CROSS.c  csprng_hash.h  merkle.c  merkle_tree.h  parameters.h  seedtree.c
crypto_sign/crossv2.0-sha3-r-sdp-1-small/ultra/: merkle_tree.h  parameters.h
crypto_sign/crossv2.0-sha3-r-sdp-1-small/ultra/light/: parameters.h
crypto_sign/crossv2.0-sha3-r-sdp-3-balance/ultra/: fp_arith.h  sha3.h
crypto_sign/crossv2.0-sha3-r-sdp-3-fast/ultra/: CROSS.h  csprng_hash.h
crypto_sign/crossv2.0-sha3-r-sdp-5-balance/ultra/: merkle_tree.h
crypto_sign/crossv2.0-sha3-r-sdp-5-fast/ultra/: constants.h  restr_arith.h
crypto_sign/crossv2.0-sha3-r-sdp-5-small/ultra/: CROSS.c
crypto_sign/crossv2.0-sha3-r-sdpg-1-fast/ultra/: api.h  sign.c
crypto_sign/crossv2.0-sha3-r-sdpg-3-fast/ultra/: merkle.c
crypto_sign/crossv2.0-sha3-r-sdpg-5-balance/ultra/: seedtree.c
crypto_sign/crossv2.0-sha3-r-sdpg-5-fast/ultra/: pack_unpack.c
crypto_sign/crossv2.0-sha3-r-sdpg-5-small/ultra/: csprng_hash.c  pack_unpack.h  parameters.h
mupq/crypto_sign/: fix-symlinks.py  profile.c
mupq/crypto_sign/crossv2.0-sha3-r-sdp-1-fast/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdp-1-small/light/: CROSS.c  constants.h  csprng_hash.h  fp_arith.h  merkle.c  merkle_tree.h  parameters.h  restr_arith.h  seedtree.c  seedtree.h
mupq/crypto_sign/crossv2.0-sha3-r-sdp-1-small/ref/: csprng_hash.h
mupq/crypto_sign/crossv2.0-sha3-r-sdp-3-balance/ref/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdp-3-fast/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdp-3-small/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdp-5-balance/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdp-5-balance/ref/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdp-5-fast/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-1-balance/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-1-small/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-3-balance/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-3-balance/ref/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-3-fast/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-5-balance/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-5-fast/light/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-5-fast/ref/: parameters.h
mupq/crypto_sign/crossv2.0-sha3-r-sdpg-5-small/ref/: parameters.h
mupq/crypto_sign/kat/: .gitignore  CMakeLists.txt  build.sh  gen_all_kat.sh
mupq/mk/: config.mk
pqm4-CROSS-balanced-small/: NOTES.md  PROFILING.md  benchmark-v2.0.csv  benchmark-v2.0.ods  benchmark.sh  benchmarks-v2.0-merkle.csv  benchmarks_aio.csv  debug.sh  make.sh  mupq.log.1  mupq.log.3  mupq.log.9  profile.gdb  profile.sh  serial-connect.sh
pqm4-CROSS-balanced-small/mupq/: mupq.py  platforms.py
pqm4-CROSS-balanced-small/mupq/crypto_sign/: fix-symlinks.py  test.c
pqm4-CROSS-balanced-small/mupq/crypto_sign/cross-sha3-r-sdp-1-small/profile/: CROSS.c  CROSS.h  sign.c
pqm4-CROSS-balanced-small/mupq/crypto_sign/cross-sha3-r-sdp-1-small/ref/: CROSS.c
pqm4-CROSS-balanced-small/mupq/crypto_sign/crossv1.2-sha3-r-sdp-1-small/profile/: CROSS.c
pqm4-CROSS-balanced-small/mupq/crypto_sign/crossv2.0-sha3-r-sdp-1-balance/light/: parameters.h
results/: .gitignore  Hashing_Evaluation-Signature_Schemes.csv  Memory_Evaluation-Signature_Schemes.csv  Memory_Evaluation-Signature_Schemes.ods  RAW-Hashing_Evaluation-Signature_Schemes.csv  RAW-Memory_Evaluation-Signature_Schemes.csv  RAW-Speed_Evaluation-Signature_Schemes.csv  Speed_Evaluation-Signature_Schemes.csv  Speed_Evaluation-Signature_Schemes.ods  benchmark_OPT_E_BAR_PRIME.csv  benchmark_OPT_HASH_CMT1.csv  benchmark_OPT_HASH_Y.csv  benchmark_OPT_KEYGEN.csv  benchmark_OPT_MERKLE.csv  benchmark_OPT_V_BAR.csv  full-benchmark-v2.0-light.csv  lightcross_orig_v2.0.csv  mucross.csv  process-data.py
results/updated-incremental/: combined-mem.ods  combined-speed.ods
scripts/: analyse_locals.py  benchmark-all-combos.py  benchmark.sh  calculate_expected_depth.py  debug.sh  fix-symlink.py  get_local_size.sh  local_size.py  profile.sh
(+25 files in other folders)
